--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-livereload-plugin": "^2.2.0"
   },
   "dependencies": {
+    "flexbox": "0.0.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1"
   }
